# euwallet-cli

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  credential-issuance-flow.md  get_info.py  par-request.md  pyproject.toml  trust_anchor.json
.github/workflows/: python-app.yml
flask-wallet-client/trust_anchors/: aHR0cHM6Ly9vcGVuaWRmZWQtdGVzdC0xLnN1bmV0LnNlOjcwMDE=
flask_wallet/: aHR0cHM6Ly9vcGVuaWRmZWQtZGV2LTEuc3VuZXQuc2U6NzAwMQ==  save_file.py  views.py
flask_wallet/trust_anchors/: aHR0cHM6Ly9vcGVuaWRmZWQtdGVzdC0xLnN1bmV0LnNlOjcwMDE=
src/: client-dev.conf  client-test.conf  client.conf  client.py  utils.py
src/euwallet_cli/: client.py  client_rework.py  credential_message.json  typer_wrapper.py  utils.py  verifier.py
src/flask_wallet/: views_1.py
src/flask_wallet/trust_anchors-test/: aHR0cHM6Ly9vcGVuaWRmZWQtZGV2LTEuc3VuZXQuc2U6NzAwMQ==
tests/: test_configuration_load.py  test_response_save.py
