[project]
name = "flask-wallet-test-client"
version = "0.1.0"
description = "Test client for Flask-based wallet application"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
"idpyoidc @ git+https://github.com/IdentityPython/idpy-oidc.git@issuer_metadata",
"fedservice @ git+https://github.com/SUNET/fedservice.git",
"openid4v @ git+https://github.com/SUNET/openid4v.git",
"idpysdjwt @ git+https://github.com/SUNET/idpy-sdjwt.git",
"requests",
"bs4"
]
