[project]
name = "euwallet-cli"
version = "0.1.0"
description = "Test client for eu wallet flows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"idpyoidc @ git+https://github.com/IdentityPython/idpy-oidc.git@issuer_metadata",
"fedservice @ git+https://github.com/SUNET/fedservice.git",
"openid4v @ git+https://github.com/SUNET/openid4v.git",
"idpysdjwt @ git+https://github.com/SUNET/idpy-sdjwt.git",
"requests",
"typer",
"beautifulsoup4"
]

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88

